# azure-clinical-data-warehouse-maplewood

./: .gitignore  Dockerfile  LICENSE  README.md  adf_pipeline.json  pyproject.toml
.github/workflows/: ci-cd.yml
adf-azure-clinical-dw-dev/: ARMTemplateForFactory.json  ARMTemplateParametersForFactory.json
adf-azure-clinical-dw-dev/linkedTemplates/: ArmTemplateParameters_master.json  ArmTemplate_0.json  ArmTemplate_master.json
app/: python_cdc.py
app/docs/: Azure_Clinical_DW_Project_Journal.docx  Azure_Clinical_DW_Project_Journal.md  arden_gem_14day_prep.md  (+3 more)
data-sim/: data_generator.py  device_readings.csv  encounters.csv  imaging.csv  labs.csv  medications.csv  patients.csv  procedures.json  registry.csv
dataset/: Parquet1.json  ParquetLinkedService.json  SqlServerOnPrem.json
docs/: arden_gem_project_plan.md  project_journal_md.md
factory/: adf-azure-clinical-dw-dev.json  adf-maplewood-edw.json
integrationRuntime/: AzureClinicalDWIR.json  IR-maplewood-edw.json  SHIR-maplewood-edw.json
linkedService/: ACDWMongoDbLinkedService.json  ACDWSqlServerLinkedService.json  AzureDataLakeStorageLinkedService.json  AzureKeyVault1.json  AzureKeyVaultLinkedService.json  Azure_kv_ls_maplewood_edw.json  MaplewoodAzureBlobStorageLS.json  SQL_Server_LS_maplewood_edw.json
nhs_synthetic_data/: patient_journeys.csv  patient_journeys.parquet  patients.csv  practices.parquet  social_care.csv  social_care.parquet  trusts.csv  trusts.parquet
pipeline/: Copy_all_sql_tables.json  Maplewood_EDW_Pipeline.json  MasterPipeline.json  pSendNotification.json  pipeline1.json
(+13 files in other folders)
